Change db structure
