# music/app/gen/openapiv2/proto/music_service/album/v1/album_service.swagger.json
@@ -89,21 +89,7 @@
       }
     },
     "v1CreateAlbumResponse": {
-      "type": "object",
-      "properties": {
-        "album": {
-          "$ref": "#/definitions/v1Album"
-        },
-        "info": {
-          "$ref": "#/definitions/v1Info"
-        },
-        "tracklist": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/music_servicetrackv1Track"
-          }
-        }
-      }
+      "type": "object"
     },
     "v1Credit": {
       "type": "object",
